-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5
-
None
-
487bd23 (dev), 3d454ca (6.5), 71f7338 (6.6)
Since Qt 6.5, caching for alias properties that point to another alias property leads to a segfault during startup (or an assert for a debug build):
ASSERT: "targetProperty" in file /path/to/qt/include/QtQml/6.5.2/QtQml/private/../../../../../../../qt5/qtdeclarative/src/qml/qml/qqmlpropertycachecreator_p.h, line 838
The first startup always works, as does starting with QML_DISABLE_DISK_CACHE=1.
This breaks one of the Qt OPC UA examples (see QTBUG-115088).
I can reproduce the issue by putting this nested item structure into a Window:
Item {
Item {
id: foo
readonly property alias myAlias: bar.prop
Item {
id: bar
Item {
id: baz
readonly property bool value: true
}
readonly property alias prop: baz.value
}
}
}
- is duplicated by
-
QTBUG-117415 Crash in QQmlPropertyCacheAliasCreator<QV4::ExecutableCompilationUnit>::propertyDataForAlias ¿QML disk cache?
-
- Closed
-
- relates to
-
QTBUG-117072 [Reg 6.4.2->6.5.2]Nested property alias crash at runtime
-
- Closed
-
For Gerrit Dashboard: QTBUG-116148 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
497345,2 | QtQml: Correctly resolve aliases to aliases when loading .qmlc files | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
498063,2 | QtQml: Correctly resolve aliases to aliases when loading .qmlc files | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
498064,2 | QtQml: Correctly resolve aliases to aliases when loading .qmlc files | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |