QtQml: Correctly resolve aliases to aliases when loading .qmlc files

We need to loop the objects until all property caches are resolved. We
cannot assume the property caches to be complete right away.

Amends commit 2d7fe23b41aa3fd719b7bc8aa585ab799e4a0c39.

Pick-to: 6.6 6.5
Fixes: QTBUG-116148
Change-Id: I407675cd1ebf8067d1b387542b4ecca8100d9b34
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>